--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   crypto: ^3.0.3
-
+  introduction_screen: ^3.1.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
