--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   crypto: ^3.0.3
-  introduction_screen: ^3.1.11
+  dialog_flowtter: ^0.3.3
+  speech_to_text: ^6.3.0
+  flutter_tts: ^3.8.3
+    introduction_screen: ^3.1.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,7 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
+  #   - assets/dialog_flow_auth.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
