Dialog flow with flutter

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   dialog_flowtter: ^0.3.3
   speech_to_text: ^6.3.0
   flutter_tts: ^3.8.3
-    introduction_screen: ^3.1.11
+  introduction_screen: ^3.1.11
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - assets/dialog_flow_auth.json
+  assets:
+    - assets/dialog_flow_auth.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
